parsing/parse.output
   0  $accept : %entry% $end

   1  program : toplevels

   2  toplevels : toplevels toplevelAt
   3            |

   4  toplevelAt : toplevel

   5  toplevel : SECTION STR LBRACE sections RBRACE
   6           | procedure
   7           | declAt

   8  sections : sections sectionAt
   9           |

  10  sectionAt : section

  11  section : procedure
  12          | datum
  13          | span
  14          | declAt

  15  declAt : decl

  16  decl : INVARIANT registers SEMI
  17       | registers SEMI
  18       | INVARIANT REGISTER registers SEMI
  19       | REGISTER registers SEMI
  20       | EXPORT ty exports SEMI
  21       | EXPORT exports SEMI
  22       | IMPORT ty imports SEMI
  23       | IMPORT imports SEMI
  24       | CONST ID EQUAL exprAt SEMI
  25       | CONST ty ID EQUAL exprAt SEMI
  26       | TYPEDEF ty names SEMI
  27       | TARGET properties SEMI

  28  uint : SINT
  29       | UINT

  30  property : MEMSIZE uint
  31           | BYTEORDER BIG
  32           | BYTEORDER LITTLE
  33           | FLOATREPR STR
  34           | CHARSET STR
  35           | PTRSIZE uint
  36           | WRDSIZE uint

  37  properties : properties property
  38             |

  39  span : SPAN sexprAt exprAt LBRACE sections RBRACE

  40  datumAt : datum

  41  datum : ID COLON
  42        | ALIGN uint SEMI
  43        | tyAt size opt_initAt SEMI

  44  opt_initAt : initAt
  45             |

  46  initAt : init

  47  init : LBRACE exprs RBRACE
  48       | LBRACE RBRACE
  49       | STR
  50       | string16

  51  registers : STR tyAt regs opt_comma
  52            | tyAt regs opt_comma

  53  regs : regs COMMA ID optEq STR
  54       | regs COMMA ID
  55       | ID optEq STR
  56       | ID

  57  optEq :
  58        | EQUAL

  59  size : LBRACKET exprAt RBRACKET
  60       | LBRACKET RBRACKET
  61       |

  62  procedure : conv ID frmls body
  63            | ID frmls body

  64  body : LBRACE body0 RBRACE

  65  body0 : body0 bodyAt
  66        |

  67  bodyAt : body1

  68  body1 : declAt
  69        | stackdecl
  70        | stmtAt

  71  frmls : LPAREN formals RPAREN
  72        | LPAREN RPAREN

  73  actls : LPAREN actuals RPAREN
  74        | LPAREN RPAREN

  75  formals : formals_ opt_comma

  76  formals_ : formals_ COMMA formal
  77           | formal

  78  actuals : actuals_ opt_comma

  79  actuals_ : actuals_ COMMA actual
  80           | actual

  81  formal : bare_formal

  82  bare_formal : opt_kind opt_invariant opt_register tyAt ID opt_aligned

  83  opt_kind : STR
  84           |

  85  opt_invariant : INVARIANT
  86                |

  87  opt_register : REGISTER
  88               |

  89  cformal : opt_kind ID opt_aligned

  90  cformals : cformals_ opt_comma
  91           | opt_comma

  92  cformals_ : cformals_ COMMA cformal
  93            | cformal

  94  actual : opt_kind exprAt opt_aligned

  95  stackdecl : STACKDATA LBRACE data RBRACE

  96  data : data datumAt
  97       |

  98  conv : FOREIGN STR

  99  aligned : ALIGNED uint

 100  flowAt : flow

 101  flow : ALSO CUTS TO names
 102       | ALSO UNWINDS TO names
 103       | ALSO RETURNS TO names
 104       | ALSO ABORTS
 105       | NEVER RETURNS

 106  flows : flows flowAt
 107        |

 108  targets : TARGETS names
 109          |

 110  aliasAt : alias

 111  alias : READS opt_names
 112        | WRITES opt_names

 113  procanns : procanns flowAt
 114           | procanns aliasAt
 115           |

 116  nameOrMemAt : nameOrMem

 117  nameOrMem : nameOrMem0
 118            | ID aligned
 119            | STR ID opt_aligned

 120  nameOrMemAt0 : nameOrMem0

 121  nameOrMem0 : ID
 122             | mem_type LBRACKET exprAt mem_properties RBRACKET

 123  mem_type : sty
 124           | ID

 125  mem_properties : aligned opt_in_ids
 126                 | IN ids opt_aligned
 127                 |

 128  opt_aligned :
 129              | aligned

 130  opt_in_ids :
 131             | IN ids

 132  ids : ID
 133      | ID COMMA ids

 134  nameOrMems : nameOrMems_ opt_comma

 135  nameOrMems_ : nameOrMems_ COMMA nameOrMemAt
 136              | nameOrMemAt

 137  tyAt : ty

 138  ty : sty
 139     | ID

 140  sty : BITSn

 141  returnto : LT sexprAt SLASH sexprAt GT
 142           |

 143  stmtAt : stmt

 144  stmt : SEMI
 145       | ID COLON
 146       | SPAN sexprAt sexprAt body
 147       | nameOrMems EQUAL exprs SEMI
 148       | nameOrMems EQUAL conv PPERCENT ID actls flows SEMI
 149       | conv PPERCENT ID actls flows SEMI
 150       | nameOrMems EQUAL conv expr actls targets procanns SEMI
 151       | conv expr actls targets procanns SEMI
 152       | nameOrMems EQUAL PPERCENT ID actls flows SEMI
 153       | PPERCENT ID actls flows SEMI
 154       | nameOrMems EQUAL expr actls targets procanns SEMI
 155       | expr actls targets procanns SEMI
 156       | IF exprAt body
 157       | IF exprAt body ELSE body
 158       | GOTO exprAt targets SEMI
 159       | CONTINUATION ID LPAREN cformals RPAREN COLON
 160       | CUT TO expr actls flows SEMI
 161       | LIMITCHECK exprAt limitfailure SEMI
 162       | conv JUMP exprAt targets SEMI
 163       | JUMP exprAt targets SEMI
 164       | conv JUMP exprAt actls targets SEMI
 165       | JUMP exprAt actls targets SEMI
 166       | conv RETURN returnto SEMI
 167       | RETURN returnto SEMI
 168       | conv RETURN returnto actls SEMI
 169       | RETURN returnto actls SEMI
 170       | SWITCH srange expr LBRACE arms RBRACE

 171  limitfailure : FAILS TO exprAt
 172               |

 173  srange : LBRACKET range RBRACKET
 174         |

 175  range : expr
 176        | expr DOTDOT expr

 177  ranges : ranges_
 178         | ranges_ COMMA
 179         |

 180  ranges_ : ranges_ COMMA range
 181          | range

 182  arms : arms armAt
 183       |

 184  armAt : arm

 185  arm : CASE ranges COLON body

 186  sexprAt : sexpr

 187  sexpr : SINT opt_colon_ty
 188        | UINT opt_colon_ty
 189        | FLT opt_colon_ty
 190        | CHAR opt_colon_ty
 191        | nameOrMemAt0
 192        | PRIMOP
 193        | LPAREN exprAt RPAREN

 194  opt_colon_ty : CCOLON tyAt
 195               |

 196  exprAt : expr

 197  expr : sexpr
 198       | PRIMOP actls
 199       | exprAt PLUS exprAt
 200       | exprAt MINUS exprAt
 201       | exprAt PERCENT exprAt
 202       | exprAt STAR exprAt
 203       | exprAt SLASH exprAt
 204       | exprAt LLESS exprAt
 205       | exprAt GGREATER exprAt
 206       | exprAt CARET exprAt
 207       | exprAt BAR exprAt
 208       | exprAt AMPERSAND exprAt
 209       | exprAt EEQ exprAt
 210       | exprAt NEQ exprAt
 211       | exprAt LT exprAt
 212       | exprAt LEQ exprAt
 213       | exprAt GEQ exprAt
 214       | exprAt GT exprAt
 215       | exprAt INFIXOP exprAt
 216       | TILDE exprAt
 217       | MINUS exprAt

 218  exprs : exprs_ opt_comma

 219  exprs_ : exprs_ COMMA exprAt
 220         | exprAt

 221  imports : imports_ opt_comma

 222  imports_ : imports_ COMMA STR AS ID
 223           | imports_ COMMA ID
 224           | STR AS ID
 225           | ID

 226  exports : exports_ opt_comma

 227  exports_ : exports_ COMMA ID AS STR
 228           | exports_ COMMA ID
 229           | ID AS STR
 230           | ID

 231  names : names_ opt_comma

 232  names_ : names_ COMMA ID
 233         | ID

 234  opt_names : names
 235            |

 236  opt_comma : COMMA
 237            |

 238  string16 : UNICODE LPAREN STR RPAREN

 239  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (239)
	toplevels : .  (3)

	.  reduce 3

	program  goto 3
	toplevels  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (239)

	.  reduce 239


state 4
	program : toplevels .  (1)
	toplevels : toplevels . toplevelAt  (2)

	CONST  shift 5
	EXPORT  shift 6
	FOREIGN  shift 7
	IMPORT  shift 8
	INVARIANT  shift 9
	REGISTER  shift 10
	SECTION  shift 11
	TARGET  shift 12
	TYPEDEF  shift 13
	ID  shift 14
	STR  shift 15
	BITSn  shift 16
	$end  reduce 1

	toplevelAt  goto 17
	toplevel  goto 18
	procedure  goto 19
	declAt  goto 20
	decl  goto 21
	registers  goto 22
	ty  goto 23
	tyAt  goto 24
	conv  goto 25
	sty  goto 26


state 5
	decl : CONST . ID EQUAL exprAt SEMI  (24)
	decl : CONST . ty ID EQUAL exprAt SEMI  (25)

	ID  shift 27
	BITSn  shift 16
	.  error

	ty  goto 28
	sty  goto 26


state 6
	decl : EXPORT . ty exports SEMI  (20)
	decl : EXPORT . exports SEMI  (21)

	ID  shift 29
	BITSn  shift 16
	.  error

	ty  goto 30
	exports  goto 31
	sty  goto 26
	exports_  goto 32


state 7
	conv : FOREIGN . STR  (98)

	STR  shift 33
	.  error


state 8
	decl : IMPORT . ty imports SEMI  (22)
	decl : IMPORT . imports SEMI  (23)

	ID  shift 34
	STR  shift 35
	BITSn  shift 16
	.  error

	ty  goto 36
	imports  goto 37
	sty  goto 26
	imports_  goto 38


state 9
	decl : INVARIANT . registers SEMI  (16)
	decl : INVARIANT . REGISTER registers SEMI  (18)

	REGISTER  shift 39
	ID  shift 40
	STR  shift 15
	BITSn  shift 16
	.  error

	registers  goto 41
	ty  goto 23
	tyAt  goto 24
	sty  goto 26


state 10
	decl : REGISTER . registers SEMI  (19)

	ID  shift 40
	STR  shift 15
	BITSn  shift 16
	.  error

	registers  goto 42
	ty  goto 23
	tyAt  goto 24
	sty  goto 26


state 11
	toplevel : SECTION . STR LBRACE sections RBRACE  (5)

	STR  shift 43
	.  error


state 12
	decl : TARGET . properties SEMI  (27)
	properties : .  (38)

	.  reduce 38

	properties  goto 44


state 13
	decl : TYPEDEF . ty names SEMI  (26)

	ID  shift 40
	BITSn  shift 16
	.  error

	ty  goto 45
	sty  goto 26


state 14
	procedure : ID . frmls body  (63)
	ty : ID .  (139)

	LPAREN  shift 46
	ID  reduce 139

	frmls  goto 47


state 15
	registers : STR . tyAt regs opt_comma  (51)

	ID  shift 40
	BITSn  shift 16
	.  error

	ty  goto 23
	tyAt  goto 48
	sty  goto 26


state 16
	sty : BITSn .  (140)

	.  reduce 140


state 17
	toplevels : toplevels toplevelAt .  (2)

	.  reduce 2


state 18
	toplevelAt : toplevel .  (4)

	.  reduce 4


state 19
	toplevel : procedure .  (6)

	.  reduce 6


state 20
	toplevel : declAt .  (7)

	.  reduce 7


state 21
	declAt : decl .  (15)

	.  reduce 15


state 22
	decl : registers . SEMI  (17)

	SEMI  shift 49
	.  error


state 23
	tyAt : ty .  (137)

	.  reduce 137


state 24
	registers : tyAt . regs opt_comma  (52)

	ID  shift 50
	.  error

	regs  goto 51


state 25
	procedure : conv . ID frmls body  (62)

	ID  shift 52
	.  error


state 26
	ty : sty .  (138)

	.  reduce 138


state 27
	decl : CONST ID . EQUAL exprAt SEMI  (24)
	ty : ID .  (139)

	EQUAL  shift 53
	ID  reduce 139


state 28
	decl : CONST ty . ID EQUAL exprAt SEMI  (25)

	ID  shift 54
	.  error


state 29
	ty : ID .  (139)
	exports_ : ID . AS STR  (229)
	exports_ : ID .  (230)

	AS  shift 55
	COMMA  reduce 230
	SEMI  reduce 230
	ID  reduce 139


state 30
	decl : EXPORT ty . exports SEMI  (20)

	ID  shift 56
	.  error

	exports  goto 57
	exports_  goto 32


state 31
	decl : EXPORT exports . SEMI  (21)

	SEMI  shift 58
	.  error


state 32
	exports : exports_ . opt_comma  (226)
	exports_ : exports_ . COMMA ID AS STR  (227)
	exports_ : exports_ . COMMA ID  (228)
	opt_comma : .  (237)

	COMMA  shift 59
	SEMI  reduce 237

	opt_comma  goto 60


state 33
	conv : FOREIGN STR .  (98)

	.  reduce 98


state 34
	ty : ID .  (139)
	imports_ : ID .  (225)

	COMMA  reduce 225
	SEMI  reduce 225
	ID  reduce 139
	STR  reduce 139


state 35
	imports_ : STR . AS ID  (224)

	AS  shift 61
	.  error


state 36
	decl : IMPORT ty . imports SEMI  (22)

	ID  shift 62
	STR  shift 35
	.  error

	imports  goto 63
	imports_  goto 38


state 37
	decl : IMPORT imports . SEMI  (23)

	SEMI  shift 64
	.  error


state 38
	imports : imports_ . opt_comma  (221)
	imports_ : imports_ . COMMA STR AS ID  (222)
	imports_ : imports_ . COMMA ID  (223)
	opt_comma : .  (237)

	COMMA  shift 65
	SEMI  reduce 237

	opt_comma  goto 66


state 39
	decl : INVARIANT REGISTER . registers SEMI  (18)

	ID  shift 40
	STR  shift 15
	BITSn  shift 16
	.  error

	registers  goto 67
	ty  goto 23
	tyAt  goto 24
	sty  goto 26


state 40
	ty : ID .  (139)

	.  reduce 139


state 41
	decl : INVARIANT registers . SEMI  (16)

	SEMI  shift 68
	.  error


state 42
	decl : REGISTER registers . SEMI  (19)

	SEMI  shift 69
	.  error


state 43
	toplevel : SECTION STR . LBRACE sections RBRACE  (5)

	LBRACE  shift 70
	.  error


state 44
	decl : TARGET properties . SEMI  (27)
	properties : properties . property  (37)

	BYTEORDER  shift 71
	MEMSIZE  shift 72
	SEMI  shift 73
	WRDSIZE  shift 74
	PTRSIZE  shift 75
	FLOATREPR  shift 76
	CHARSET  shift 77
	.  error

	property  goto 78


state 45
	decl : TYPEDEF ty . names SEMI  (26)

	ID  shift 79
	.  error

	names  goto 80
	names_  goto 81


state 46
	frmls : LPAREN . formals RPAREN  (71)
	frmls : LPAREN . RPAREN  (72)
	opt_kind : .  (84)

	RPAREN  shift 82
	STR  shift 83
	INVARIANT  reduce 84
	REGISTER  reduce 84
	ID  reduce 84
	BITSn  reduce 84

	formals  goto 84
	formals_  goto 85
	formal  goto 86
	bare_formal  goto 87
	opt_kind  goto 88


state 47
	procedure : ID frmls . body  (63)

	LBRACE  shift 89
	.  error

	body  goto 90


state 48
	registers : STR tyAt . regs opt_comma  (51)

	ID  shift 50
	.  error

	regs  goto 91


state 49
	decl : registers SEMI .  (17)

	.  reduce 17


state 50
	regs : ID . optEq STR  (55)
	regs : ID .  (56)
	optEq : .  (57)

	EQUAL  shift 92
	COMMA  reduce 56
	SEMI  reduce 56
	STR  reduce 57

	optEq  goto 93


state 51
	registers : tyAt regs . opt_comma  (52)
	regs : regs . COMMA ID optEq STR  (53)
	regs : regs . COMMA ID  (54)
	opt_comma : .  (237)

	COMMA  shift 94
	SEMI  reduce 237

	opt_comma  goto 95


state 52
	procedure : conv ID . frmls body  (62)

	LPAREN  shift 46
	.  error

	frmls  goto 96


state 53
	decl : CONST ID EQUAL . exprAt SEMI  (24)

	LPAREN  shift 97
	MINUS  shift 98
	TILDE  shift 99
	PRIMOP  shift 100
	ID  shift 101
	BITSn  shift 16
	SINT  shift 102
	UINT  shift 103
	FLT  shift 104
	CHAR  shift 105
	.  error

	exprAt  goto 106
	nameOrMem0  goto 107
	nameOrMemAt0  goto 108
	mem_type  goto 109
	sty  goto 110
	expr  goto 111
	sexpr  goto 112


state 54
	decl : CONST ty ID . EQUAL exprAt SEMI  (25)

	EQUAL  shift 113
	.  error


state 55
	exports_ : ID AS . STR  (229)

	STR  shift 114
	.  error


state 56
	exports_ : ID . AS STR  (229)
	exports_ : ID .  (230)

	AS  shift 55
	COMMA  reduce 230
	SEMI  reduce 230


state 57
	decl : EXPORT ty exports . SEMI  (20)

	SEMI  shift 115
	.  error


state 58
	decl : EXPORT exports SEMI .  (21)

	.  reduce 21


state 59
	exports_ : exports_ COMMA . ID AS STR  (227)
	exports_ : exports_ COMMA . ID  (228)
	opt_comma : COMMA .  (236)

	ID  shift 116
	SEMI  reduce 236


state 60
	exports : exports_ opt_comma .  (226)

	.  reduce 226


state 61
	imports_ : STR AS . ID  (224)

	ID  shift 117
	.  error


state 62
	imports_ : ID .  (225)

	.  reduce 225


state 63
	decl : IMPORT ty imports . SEMI  (22)

	SEMI  shift 118
	.  error


state 64
	decl : IMPORT imports SEMI .  (23)

	.  reduce 23


state 65
	imports_ : imports_ COMMA . STR AS ID  (222)
	imports_ : imports_ COMMA . ID  (223)
	opt_comma : COMMA .  (236)

	ID  shift 119
	STR  shift 120
	SEMI  reduce 236


state 66
	imports : imports_ opt_comma .  (221)

	.  reduce 221


state 67
	decl : INVARIANT REGISTER registers . SEMI  (18)

	SEMI  shift 121
	.  error


state 68
	decl : INVARIANT registers SEMI .  (16)

	.  reduce 16


state 69
	decl : REGISTER registers SEMI .  (19)

	.  reduce 19


state 70
	toplevel : SECTION STR LBRACE . sections RBRACE  (5)
	sections : .  (9)

	.  reduce 9

	sections  goto 122


state 71
	property : BYTEORDER . BIG  (31)
	property : BYTEORDER . LITTLE  (32)

	BIG  shift 123
	LITTLE  shift 124
	.  error


state 72
	property : MEMSIZE . uint  (30)

	SINT  shift 125
	UINT  shift 126
	.  error

	uint  goto 127


state 73
	decl : TARGET properties SEMI .  (27)

	.  reduce 27


state 74
	property : WRDSIZE . uint  (36)

	SINT  shift 125
	UINT  shift 126
	.  error

	uint  goto 128


state 75
	property : PTRSIZE . uint  (35)

	SINT  shift 125
	UINT  shift 126
	.  error

	uint  goto 129


state 76
	property : FLOATREPR . STR  (33)

	STR  shift 130
	.  error


state 77
	property : CHARSET . STR  (34)

	STR  shift 131
	.  error


state 78
	properties : properties property .  (37)

	.  reduce 37


state 79
	names_ : ID .  (233)

	.  reduce 233


state 80
	decl : TYPEDEF ty names . SEMI  (26)

	SEMI  shift 132
	.  error


state 81
	names : names_ . opt_comma  (231)
	names_ : names_ . COMMA ID  (232)
	opt_comma : .  (237)

	COMMA  shift 133
	ALSO  reduce 237
	NEVER  reduce 237
	READS  reduce 237
	SEMI  reduce 237
	WRITES  reduce 237

	opt_comma  goto 134


state 82
	frmls : LPAREN RPAREN .  (72)

	.  reduce 72


state 83
	opt_kind : STR .  (83)

	.  reduce 83


state 84
	frmls : LPAREN formals . RPAREN  (71)

	RPAREN  shift 135
	.  error


state 85
	formals : formals_ . opt_comma  (75)
	formals_ : formals_ . COMMA formal  (76)
	opt_comma : .  (237)

	COMMA  shift 136
	RPAREN  reduce 237

	opt_comma  goto 137


state 86
	formals_ : formal .  (77)

	.  reduce 77


state 87
	formal : bare_formal .  (81)

	.  reduce 81


state 88
	bare_formal : opt_kind . opt_invariant opt_register tyAt ID opt_aligned  (82)
	opt_invariant : .  (86)

	INVARIANT  shift 138
	REGISTER  reduce 86
	ID  reduce 86
	BITSn  reduce 86

	opt_invariant  goto 139


state 89
	body : LBRACE . body0 RBRACE  (64)
	body0 : .  (66)

	.  reduce 66

	body0  goto 140


state 90
	procedure : ID frmls body .  (63)

	.  reduce 63


state 91
	registers : STR tyAt regs . opt_comma  (51)
	regs : regs . COMMA ID optEq STR  (53)
	regs : regs . COMMA ID  (54)
	opt_comma : .  (237)

	COMMA  shift 94
	SEMI  reduce 237

	opt_comma  goto 141


state 92
	optEq : EQUAL .  (58)

	.  reduce 58


state 93
	regs : ID optEq . STR  (55)

	STR  shift 142
	.  error


state 94
	regs : regs COMMA . ID optEq STR  (53)
	regs : regs COMMA . ID  (54)
	opt_comma : COMMA .  (236)

	ID  shift 143
	SEMI  reduce 236


state 95
	registers : tyAt regs opt_comma .  (52)

	.  reduce 52


state 96
	procedure : conv ID frmls . body  (62)

	LBRACE  shift 89
	.  error

	body  goto 144


state 97
	sexpr : LPAREN . exprAt RPAREN  (193)

	LPAREN  shift 97
	MINUS  shift 98
	TILDE  shift 99
	PRIMOP  shift 100
	ID  shift 101
	BITSn  shift 16
	SINT  shift 102
	UINT  shift 103
	FLT  shift 104
	CHAR  shift 105
	.  error

	exprAt  goto 145
	nameOrMem0  goto 107
	nameOrMemAt0  goto 108
	mem_type  goto 109
	sty  goto 110
	expr  goto 111
	sexpr  goto 112


state 98
	expr : MINUS . exprAt  (217)

	LPAREN  shift 97
	MINUS  shift 98
	TILDE  shift 99
	PRIMOP  shift 100
	ID  shift 101
	BITSn  shift 16
	SINT  shift 102
	UINT  shift 103
	FLT  shift 104
	CHAR  shift 105
	.  error

	exprAt  goto 146
	nameOrMem0  goto 107
	nameOrMemAt0  goto 108
	mem_type  goto 109
	sty  goto 110
	expr  goto 111
	sexpr  goto 112


state 99
	expr : TILDE . exprAt  (216)

	LPAREN  shift 97
	MINUS  shift 98
	TILDE  shift 99
	PRIMOP  shift 100
	ID  shift 101
	BITSn  shift 16
	SINT  shift 102
	UINT  shift 103
	FLT  shift 104
	CHAR  shift 105
	.  error

	exprAt  goto 147
	nameOrMem0  goto 107
	nameOrMemAt0  goto 108
	mem_type  goto 109
	sty  goto 110
	expr  goto 111
	sexpr  goto 112


state 100
	sexpr : PRIMOP .  (192)
	expr : PRIMOP . actls  (198)

	LPAREN  shift 148
	ALIGNED  reduce 192
	AMPERSAND  reduce 192
	COLON  reduce 192
	COMMA  reduce 192
	DOTDOT  reduce 192
	FAILS  reduce 192
	IN  reduce 192
	INFIXOP  reduce 192
	LBRACE  reduce 192
	RBRACE  reduce 192
	RBRACKET  reduce 192
	RPAREN  reduce 192
	SEMI  reduce 192
	TARGETS  reduce 192
	EEQ  reduce 192
	NEQ  reduce 192
	LT  reduce 192
	LEQ  reduce 192
	GT  reduce 192
	GEQ  reduce 192
	BAR  reduce 192
	CARET  reduce 192
	LLESS  reduce 192
	GGREATER  reduce 192
	PLUS  reduce 192
	MINUS  reduce 192
	PERCENT  reduce 192
	STAR  reduce 192
	SLASH  reduce 192

	actls  goto 149


state 101
	nameOrMem0 : ID .  (121)
	mem_type : ID .  (124)

	ALIGNED  reduce 121
	AMPERSAND  reduce 121
	COLON  reduce 121
	COMMA  reduce 121
	DOTDOT  reduce 121
	FAILS  reduce 121
	IN  reduce 121
	INFIXOP  reduce 121
	LBRACE  reduce 121
	LBRACKET  reduce 124
	LPAREN  reduce 121
	RBRACE  reduce 121
	RBRACKET  reduce 121
	RPAREN  reduce 121
	SEMI  reduce 121
	TARGETS  reduce 121
	EEQ  reduce 121
	NEQ  reduce 121
	LT  reduce 121
	LEQ  reduce 121
	GT  reduce 121
	GEQ  reduce 121
	BAR  reduce 121
	CARET  reduce 121
	LLESS  reduce 121
	GGREATER  reduce 121
	PLUS  reduce 121
	MINUS  reduce 121
	PERCENT  reduce 121
	STAR  reduce 121
	SLASH  reduce 121
	TILDE  reduce 121
	PRIMOP  reduce 121
	ID  reduce 121
	BITSn  reduce 121
	SINT  reduce 121
	UINT  reduce 121
	FLT  reduce 121
	CHAR  reduce 121


state 102
	sexpr : SINT . opt_colon_ty  (187)
	opt_colon_ty : .  (195)

	CCOLON  shift 150
	ALIGNED  reduce 195
	AMPERSAND  reduce 195
	COLON  reduce 195
	COMMA  reduce 195
	DOTDOT  reduce 195
	FAILS  reduce 195
	IN  reduce 195
	INFIXOP  reduce 195
	LBRACE  reduce 195
	LPAREN  reduce 195
	RBRACE  reduce 195
	RBRACKET  reduce 195
	RPAREN  reduce 195
	SEMI  reduce 195
	TARGETS  reduce 195
	EEQ  reduce 195
	NEQ  reduce 195
	LT  reduce 195
	LEQ  reduce 195
	GT  reduce 195
	GEQ  reduce 195
	BAR  reduce 195
	CARET  reduce 195
	LLESS  reduce 195
	GGREATER  reduce 195
	PLUS  reduce 195
	MINUS  reduce 195
	PERCENT  reduce 195
	STAR  reduce 195
	SLASH  reduce 195
	TILDE  reduce 195
	PRIMOP  reduce 195
	ID  reduce 195
	BITSn  reduce 195
	SINT  reduce 195
	UINT  reduce 195
	FLT  reduce 195
	CHAR  reduce 195

	opt_colon_ty  goto 151


state 103
	sexpr : UINT . opt_colon_ty  (188)
	opt_colon_ty : .  (195)

	CCOLON  shift 150
	ALIGNED  reduce 195
	AMPERSAND  reduce 195
	COLON  reduce 195
	COMMA  reduce 195
	DOTDOT  reduce 195
	FAILS  reduce 195
	IN  reduce 195
	INFIXOP  reduce 195
	LBRACE  reduce 195
	LPAREN  reduce 195
	RBRACE  reduce 195
	RBRACKET  reduce 195
	RPAREN  reduce 195
	SEMI  reduce 195
	TARGETS  reduce 195
	EEQ  reduce 195
	NEQ  reduce 195
	LT  reduce 195
	LEQ  reduce 195
	GT  reduce 195
	GEQ  reduce 195
	BAR  reduce 195
	CARET  reduce 195
	LLESS  reduce 195
	GGREATER  reduce 195
	PLUS  reduce 195
	MINUS  reduce 195
	PERCENT  reduce 195
	STAR  reduce 195
	SLASH  reduce 195
	TILDE  reduce 195
	PRIMOP  reduce 195
	ID  reduce 195
	BITSn  reduce 195
	SINT  reduce 195
	UINT  reduce 195
	FLT  reduce 195
	CHAR  reduce 195

	opt_colon_ty  goto 152


state 104
	sexpr : FLT . opt_colon_ty  (189)
	opt_colon_ty : .  (195)

	CCOLON  shift 150
	ALIGNED  reduce 195
	AMPERSAND  reduce 195
	COLON  reduce 195
	COMMA  reduce 195
	DOTDOT  reduce 195
	FAILS  reduce 195
	IN  reduce 195
	INFIXOP  reduce 195
	LBRACE  reduce 195
	LPAREN  reduce 195
	RBRACE  reduce 195
	RBRACKET  reduce 195
	RPAREN  reduce 195
	SEMI  reduce 195
	TARGETS  reduce 195
	EEQ  reduce 195
	NEQ  reduce 195
	LT  reduce 195
	LEQ  reduce 195
	GT  reduce 195
	GEQ  reduce 195
	BAR  reduce 195
	CARET  reduce 195
	LLESS  reduce 195
	GGREATER  reduce 195
	PLUS  reduce 195
	MINUS  reduce 195
	PERCENT  reduce 195
	STAR  reduce 195
	SLASH  reduce 195
	TILDE  reduce 195
	PRIMOP  reduce 195
	ID  reduce 195
	BITSn  reduce 195
	SINT  reduce 195
	UINT  reduce 195
	FLT  reduce 195
	CHAR  reduce 195

	opt_colon_ty  goto 153


state 105
	sexpr : CHAR . opt_colon_ty  (190)
	opt_colon_ty : .  (195)

	CCOLON  shift 150
	ALIGNED  reduce 195
	AMPERSAND  reduce 195
	COLON  reduce 195
	COMMA  reduce 195
	DOTDOT  reduce 195
	FAILS  reduce 195
	IN  reduce 195
	INFIXOP  reduce 195
	LBRACE  reduce 195
	LPAREN  reduce 195
	RBRACE  reduce 195
	RBRACKET  reduce 195
	RPAREN  reduce 195
	SEMI  reduce 195
	TARGETS  reduce 195
	EEQ  reduce 195
	NEQ  reduce 195
	LT  reduce 195
	LEQ  reduce 195
	GT  reduce 195
	GEQ  reduce 195
	BAR  reduce 195
	CARET  reduce 195
	LLESS  reduce 195
	GGREATER  reduce 195
	PLUS  reduce 195
	MINUS  reduce 195
	PERCENT  reduce 195
	STAR  reduce 195
	SLASH  reduce 195
	TILDE  reduce 195
	PRIMOP  reduce 195
	ID  reduce 195
	BITSn  reduce 195
	SINT  reduce 195
	UINT  reduce 195
	FLT  reduce 195
	CHAR  reduce 195

	opt_colon_ty  goto 154


state 106
	decl : CONST ID EQUAL exprAt . SEMI  (24)
	expr : exprAt . PLUS exprAt  (199)
	expr : exprAt . MINUS exprAt  (200)
	expr : exprAt . PERCENT exprAt  (201)
	expr : exprAt . STAR exprAt  (202)
	expr : exprAt . SLASH exprAt  (203)
	expr : exprAt . LLESS exprAt  (204)
	expr : exprAt . GGREATER exprAt  (205)
	expr : exprAt . CARET exprAt  (206)
	expr : exprAt . BAR exprAt  (207)
	expr : exprAt . AMPERSAND exprAt  (208)
	expr : exprAt . EEQ exprAt  (209)
	expr : exprAt . NEQ exprAt  (210)
	expr : exprAt . LT exprAt  (211)
	expr : exprAt . LEQ exprAt  (212)
	expr : exprAt . GEQ exprAt  (213)
	expr : exprAt . GT exprAt  (214)
	expr : exprAt . INFIXOP exprAt  (215)

	AMPERSAND  shift 155
	INFIXOP  shift 156
	SEMI  shift 157
	EEQ  shift 158
	NEQ  shift 159
	LT  shift 160
	LEQ  shift 161
	GT  shift 162
	GEQ  shift 163
	BAR  shift 164
	CARET  shift 165
	LLESS  shift 166
	GGREATER  shift 167
	PLUS  shift 168
	MINUS  shift 169
	PERCENT  shift 170
	STAR  shift 171
	SLASH  shift 172
	.  error


state 107
	nameOrMemAt0 : nameOrMem0 .  (120)

	.  reduce 120


state 108
	sexpr : nameOrMemAt0 .  (191)

	.  reduce 191


state 109
	nameOrMem0 : mem_type . LBRACKET exprAt mem_properties RBRACKET  (122)

	LBRACKET  shift 173
	.  error


state 110
	mem_type : sty .  (123)

	.  reduce 123


state 111
	exprAt : expr .  (196)

	.  reduce 196


state 112
	expr : sexpr .  (197)

	.  reduce 197


state 113
	decl : CONST ty ID EQUAL . exprAt SEMI  (25)

	LPAREN  shift 97
	MINUS  shift 98
	TILDE  shift 99
	PRIMOP  shift 100
	ID  shift 101
	BITSn  shift 16
	SINT  shift 102
	UINT  shift 103
	FLT  shift 104
	CHAR  shift 105
	.  error
